2002-04-27  Glenn Maynard <g_ld@zewt.org>

	* LsCache.cc: add cache:cache-empty-listings.
	* buffer.h: add IsSaving().
	* FtpDirList.cc, Fish.cc: use alternative LsCache::Add.

2002-04-23  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopyFtp.cc, resource.cc: add ftp:fxp-force setting.
	* ftpclass.cc: fix status in fxp mode.

2002-04-18  Glenn Maynard <g_ld@zewt.org>

	* Job.cc: Free waiting on dtor.
	* GetFileInfo.cc, GetFileInfo.h: fix comment.

2002-04-17  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc: create first target directory with all parent dirs.

2002-04-15  Glenn Maynard <g_ld@zewt.org>

	* TreatFileJob.cc: remove unneeded return.

2002-04-08  Alexander V. Lukyanov <lav@yars.free.net>

	* Http.cc: accept file size in 416 reply.

2002-04-08  Glenn Maynard <g_ld@zewt.org>

	* FileSetOutput.cc: fix unneeded assert.

2002-03-26  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: don't send CWD ~ when PWD failed.

2002-03-18  Alexander V. Lukyanov <lav@yars.free.net>

	* NetAccess.cc: explicit cast for Compaq C++.

2002-03-18  Alexander V. Lukyanov <lav@yars.free.net>

	* ProcWait.cc: don't flood stdout with waitpid errors, it can be
	  possible if lftp forks into background.

2002-03-15  Alexander V. Lukyanov <lav@yars.free.net>

	* Job.cc: fix occasional spinning when mirror terminates.

2002-03-14  Alexander V. Lukyanov <lav@yars.free.net>

	* SleepJob.cc: if the time is in the past, assume it is for tomorrow.

2002-03-13  Alexander V. Lukyanov <lav@yars.free.net>

	* NetAccess.cc: don't clear hostname etc on lookup error.
	* FileAccess.cc: (Chdir) handle cwd==0 correctly (reported by Glenn
	  Maynard <g_ld@zewt.org>).

2002-03-10  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: add ifdef USE_SSL around data_ssl.

2002-02-27  Ayamura KIKUCHI <ayamura@ayamura.org>

	* FileSetOutput.cc, lftp.cc: locale.h is now included from config.h.

2002-02-26  Alexander V. Lukyanov <lav@yars.free.net>
