@@ -1,3 +1,8 @@
+2002-04-30  Alexander V. Lukyanov <lav@yars.free.net>
+
+	* Http.cc: add missing port to hftp request.
+	* ftpclass.cc: ignore any 550 error for NLST if no file name given.
+
 2002-04-27  Glenn Maynard <g_ld@zewt.org>
 
 	* LsCache.cc: add cache:cache-empty-listings.
